@@ -3,7 +3,7 @@ Type: Package
 Author: Jing Zhou, Yuxuan Shui
 Maintainer: Jing ZHou <12210240050@fudan.edu.cn>
 Title: MeSH(Medical Subject Headings) Semantic Similarity Measures
-Version: 0.99.5
+Version: 0.99.6
 Date: 2015-01-11
 Imports: XML, RCurl
 Depends: R(>= 3.0.0)
