@@ -1,4 +1,6 @@
 MeSHSim package
+2015-01-12: add brief model for nodeInfo
+
 2015-01-12: adjust parameter and update MeSH information
 
 2015-01-12: fix bugs
